# visualizacao_de_dados

./: .gitignore  .plot.py.un~  .texto.txt.un~  Dockerfile  bars.py  csv_plot_gen.py  dots.py  folium_map.py  lines.py  main.py  main2.py  main3.py  main4.py  mapa.html  pie.py  plot.py  pyproject.toml  requirements.txt  subplot.py  texto.txt  waffle.py
